# ListenHelp

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/listenhelp6/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AAudioProcessor.cpp  AAudioProcessor.h  CMakeLists.txt  audioproc.cpp
app/src/main/java/com/example/listenhelp6/: MainActivity.java  SplashActivity.java
app/src/main/java/com/example/listenhelp6/audio/: AAudioManager.java  AAudioProcessorJNI.java  AudioInputManager.java  AudioOutputManager.java  AudioProcessor.java  HorizontalEqualizerView.java  WaveformCallback.java  WaveformView.java
app/src/main/java/com/example/listenhelp6/dialog/: EqualizerDialog.java
app/src/main/java/com/example/listenhelp6/service/: AudioProcessingService.java
app/src/main/java/com/example/listenhelp6/view/: TestWaveformView.java  WaveformView.java
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/drawable/: ic_notification.xml  splash_logo.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  dialog_equalizer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/listenhelp6/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
